--- a/JavaScript/Lecture_2/Labs/4.Math_Object/problem_4.1/index.html
+++ b/JavaScript/Lecture_2/Labs/4.Math_Object/problem_4.1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Problem</title>
+    <title>Problem 4.1</title>
   </head>
   <body>
     <script src="problem_4.1.js"></script>
